# ArknightsAssistant

./: CHANGELOG.md  CMakeLists.txt  README.md
dosc/: 项目实现文档.md
include/: ADB.hpp  Config.hpp  Config.hpp.in  SimpleController.hpp  TaskConfig.hpp  TaskExecutor.hpp  TaskLoader.hpp
include/adb/: ADB.hpp  ADBClient.hpp  AdbStatus.hpp
include/task/: TaskConfig.hpp  TaskExecutor.hpp  TaskLoader.hpp
include/vision/: image_preprocessor.h  ocr_det.h  ocr_pack.h  ocr_rec.h  region_ocrer.h  task_config.h
resource/: wonderful-word-layered-text-style_53876-124841.avif
resource/tasks/: check_sanity.json  infrastructure_harvest.json  start_arknights.json
src/: ADB.cpp  SimpleController.cpp  main.cpp
src/adb/: ADB.cpp  ADBClient.cpp  AdbStatus.cpp
src/task/: TaskExecutor.cpp
src/vision/: image_preprocessor.cpp  ocr_det.cpp  ocr_pack.cpp  ocr_rec.cpp  region_ocrer.cpp  task_config.cpp
